Samples/test/stream-with-content-type/shell/stderr.txt
module.js:472
    throw err;
    ^

Error: Cannot find module 'C:\work\autorest\src\core\AutoRest\bin\Debug\netcoreapp1.0\node_modules\autorest-core\app.js'
   at ...
